Реализовано каскадное удаление, в сервисах попробовал исправить методы получения по id, а также методы update. в сервисе курорта при получении доступных курортов добавил проверку на дату (подходят только те курорты, которые еще не начались)